@@ -11,6 +11,7 @@ Changes in TeleGNOME 0.2.1
  * Port to GTK+ 3.
  * Basic port to GtkApplication.
  * Port menu action handling from GtkUIManager/GtkAction to GAction/GMenu.
+ * Port widget construction code to GtkBuilder.
 
 Changes in TeleGNOME 0.2.0
 ==========================
